# autoscroll-linux

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md
.github/workflows/: build.yml
aur/: .SRCINFO  PKGBUILD  autoscroll.install
debian/: changelog  control  copyright  postinst  postrm  prerm  rules
indicator/: CMakeLists.txt  autoscroll-indicator.c
man/: autoscroll.1
packaging/: PKGBUILD  autoscroll.spec
service/: autoscroll-indicator.service  autoscroll.service
src/: CMakeLists.txt  config.c  config.h  evdev_backend.c  evdev_backend.h  indicator.c  indicator.h  main.c  scroll_engine.c  scroll_engine.h
tests/: CMakeLists.txt  test_scroll_engine.c
udev/: 99-autoscroll.rules
